# technologies-de-la-fete

./: .gitignore  Diagramme sans nom.drawio  README.md
hardware/: tdlf_01_04_2020_TOUCH.brd  tdlf_01_04_2020_TOUCH.sch  tdlf_03_05_2021_server.b#1  tdlf_03_05_2021_server.b#2  tdlf_03_05_2021_server.b#3  tdlf_03_05_2021_server.b#4  tdlf_03_05_2021_server.b#5  tdlf_03_05_2021_server.b#7  tdlf_03_05_2021_server.b#9  tdlf_03_05_2021_server.s#1  tdlf_03_05_2021_server.s#2  tdlf_03_05_2021_server.s#3  tdlf_03_05_2021_server.s#4  tdlf_03_05_2021_server.s#5  tdlf_03_05_2021_server.s#6  tdlf_03_05_2021_server.s#7  tdlf_03_05_2021_server.s#8  tdlf_03_05_2021_server.sch  tdlf_03_05_2021_server_top.b#1  tdlf_03_05_2021_server_top.b#2  tdlf_03_05_2021_server_top.b#3  tdlf_03_05_2021_server_top.b#4  tdlf_03_05_2021_server_top.b#5  tdlf_03_05_2021_server_top.b#6  tdlf_03_05_2021_server_top.b#7  tdlf_03_05_2021_server_top.b#9  tdlf_03_05_2021_server_top.brd  tdlf_03_05_2021_server_top.s#1  tdlf_03_05_2021_server_top.s#2  tdlf_03_05_2021_server_top.s#4  tdlf_03_05_2021_server_top.s#5  tdlf_03_05_2021_server_top.s#7  tdlf_03_05_2021_server_top.s#8  (+12 more)
software/esp-osc-main/: CMakeLists.txt  LICENSE.md  Makefile  README.md
software/esp-osc-main/components/esp_osc/: esp_osc.c  esp_osc.h
software/esp-osc-main/main/: main.c
software/esp-osc-main/test/: CMakeLists.txt
software/link_tdlf_server/main/: CMakeLists.txt  delete_me_pinouts  i2c_display.h  ledc.h  main.cpp  mdns_wifi_cfg.h  midi_link.h  mstrpck.cpp  mstrpck.h  sockets.h  tdlf.h  touch_interactions.h  workspace.code-workspace
(+98 files in other folders)
